audioholics.com (archived on 2019-04-16)
{
  "alexa_rank": 103312,
  "analysis_subcorpus": true,
  "categories": "business;informationtech;shopping",
  "char_count": 5739,
  "classifier_probability": 1.0,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.91,
  "homepage_snapshot_redirected_domain": "audioholics.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20190401192141id_/https://www.audioholics.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20190401192141id_/http%3A//audioholics.com",
  "interval": "2019_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "audioholics.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20190416020751id_/https%3A//www.audioholics.com/groups/admin/privacy",
  "policy_title": "Privacy Policy | Audioholics",
  "policy_url": "audioholics.com/groups/admin/privacy",
  "sha1": "7aa206ef3256d48f0bdbe69565581fd62a3e1d8a",
  "simhash": 2903155837436893377,
  "simhash_updated": false,
  "site_hostname": "audioholics.com",
  "site_url": "http://audioholics.com",
  "smog": 14.65,
  "strict_updated": false,
  "timestamp": "20190416020751",
  "word_count": 933,
  "year": 2019
}

--- a/a/au/aud/audioholics.com.html
+++ b/a/au/aud/audioholics.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the audioholics.com privacy policy that was archived on 2018-10-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181005212319id_/https%3A//www.audioholics.com/groups/admin/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the audioholics.com privacy policy that was archived on 2019-04-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190416020751id_/https%3A//www.audioholics.com/groups/admin/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
 <meta charset="utf-8">
@@ -11,8 +11,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="manifest" href="/manifest.webmanifest">
 <meta name="theme-color" content="#0370af">
-<link href="/assets/css/main.min.css?v=59" rel="stylesheet">
-<script id="facebook-jssdk" src="//connect.facebook.net/en_US/sdk.js#xfbml=1&amp;version=v2.0"></script><script async="" type="text/javascript" src="https://www.googletagservices.com/tag/js/gpt.js"></script><script async="" src="/assets/js/site.min.js?v=59"></script>
+<link href="/assets/css/main.min.css?v=63" rel="stylesheet">
+<script id="facebook-jssdk" src="//connect.facebook.net/en_US/sdk.js#xfbml=1&amp;version=v2.0"></script><script async="" type="text/javascript" src="https://www.googletagservices.com/tag/js/gpt.js"></script><script async="" src="/assets/js/site.min.js?v=61"></script>
 <title> Privacy Policy  | Audioholics</title>
 <base href="https://www.audioholics.com/groups/admin/privacy/">
 <link rel="canonical" href="https://www.audioholics.com/groups/admin/privacy">
@@ -117,7 +117,7 @@ ga('send', 'pageview');
 <a href="/">
 <picture>
 <source media="(min-width: 799px)" srcset="/static/logo2015.png">
-<img src="/static/logo2017.png" alt="Audioholics Logo">
+<img src="/static/logo2017.png" alt="Audioholics Logo" data-loaded="true">
 </picture>
 </a>
 </p>
@@ -128,12 +128,12 @@ ga('send', 'pageview');
 </div>
 <div id="addThisBar" class="col-lg-3">
 <div class="btn-group btn-group-justified" id="socialBar" role="group" aria-label="">
-<a class="btn " href="https://www.facebook.com/Audioholics" rel="noopener" target="_blank" title="Audioholics Facebook"><img src="/static/facebook.png" alt="Facebook"></a>
-<a role="button" class="btn " href="https://www.youtube.com/user/audioholicslive?sub_confirmation=1" rel="noopener" target="_blank" title="Audioholics Youtube"><img src="/static/youtube.png" alt="Youtube"></a>
-<a role="button" class="btn" href="https://twitter.com/audioholicslive" target="_blank" rel="noopener" title="Twitter"><img src="/static/twitter.png" alt="Twitter"></a>
-<a role="button" class="btn" href="https://plus.google.com/102131043539358824199" rel="noopener" target="_blank" title="Google Plus"><img src="/static/google-plus.png" alt="Google Plus"></a>
-<a role="button" class="btn" href="https://www.instagram.com/audioholics.llc/" rel="noopener" target="_blank" title="instagram"><img src="/static/instagram.png" alt="instagram"></a>
-<a role="button" class="btn" href="https://www.pinterest.com/bmdellasala/" rel="noopener" target="_blank" title="pinterest"><img src="/static/pinterest.png" alt="pinterest"></a>
+<a class="btn " href="https://www.facebook.com/Audioholics" rel="noopener" target="_blank" title="Audioholics Facebook"><img src="/static/facebook.png" alt="Facebook" data-loaded="true"></a>
+<a role="button" class="btn " href="https://www.youtube.com/user/audioholicslive?sub_confirmation=1" rel="noopener" target="_blank" title="Audioholics Youtube"><img src="/static/youtube.png" alt="Youtube" data-loaded="true"></a>
+<a role="button" class="btn" href="https://twitter.com/audioholicslive" target="_blank" rel="noopener" title="Twitter"><img src="/static/twitter.png" alt="Twitter" data-loaded="true"></a>
+<a role="button" class="btn" href="https://plus.google.com/102131043539358824199" rel="noopener" target="_blank" title="Google Plus"><img src="/static/google-plus.png" alt="Google Plus" data-loaded="true"></a>
+<a role="button" class="btn" href="https://www.instagram.com/audioholics.llc/" rel="noopener" target="_blank" title="instagram"><img src="/static/instagram.png" alt="instagram" data-loaded="true"></a>
+<a role="button" class="btn" href="https://www.pinterest.com/bmdellasala/" rel="noopener" target="_blank" title="pinterest"><img src="/static/pinterest.png" alt="pinterest" data-loaded="true"></a>
 </div>
 </div>
 </div>
@@ -165,7 +165,7 @@ ga('send', 'pageview');
 <div class="collapse navbar-collapse" id="top-navbar">
 <ul class="nav navbar-nav">
 <li><a href="/">Home</a></li>
-<li><a href="https://forums.audioholics.com/forums">Forums</a></li>
+<li><a href="https://forums.audioholics.com/forums/">Forums</a></li>
 <li class="dropdown"><a href="/combo-pack-ebooks" class="dropdown-toggle" data-toggle="dropdown2">E-Books</a>
 <ul class="dropdown-menu" role="menu" id="ebooks-menu">
 <li>
@@ -186,25 +186,25 @@ ga('send', 'pageview');
 <div class="col-xs-1" style="width:125px">
 <div class="primaryContent menuHeader"></div>
 <ul class="secondaryContent blockLinksList">
-<li><a href="/super-combo-pack-ebooks"><img src="/static/ad_content/super-combo.jpg" data-defsrc="/static/ad_content/super-combo.jpg" alt="ebook combo"></a></li>
+<li><a href="/super-combo-pack-ebooks"><img src="/static/ad_content/super-combo.jpg" data-src="/static/ad_content/super-combo.jpg" alt="ebook combo" data-loaded="true"></a></li>
 </ul>
 </div>
 <div class="col-xs-1" style="width:125px">
 <div class="primaryContent menuHeader"></div>
 <ul class="secondaryContent blockLinksList">
-<li><a href="/combo-pack-ebooks"><img src="//forums.audioholics.com/forums/styles/audioholics/audio/combopack.jpg" data-defsrc="//forums.audioholics.com/forums/styles/audioholics/audio/combopack.jpg" alt="ebook combo"></a></li>
+<li><a href="/combo-pack-ebooks"><img src="//forums.audioholics.com/forums/styles/audioholics/audio/combopack.jpg" data-src="//forums.audioholics.com/forums/styles/audioholics/audio/combopack.jpg" alt="ebook combo" data-loaded="true"></a></li>
 </ul>
 </div>
 <div class="col-xs-1" style="width:125px">
 <div class="primaryContent menuHeader"></div>
 <ul class="secondaryContent blockLinksList">
-<li><a href="/setup-guides-ebooks"><img src="//forums.audioholics.com/forums/styles/audioholics/audio/setupguide.jpg" data-defsrc="//forums.audioholics.com/forums/styles/audioholics/audio/setupguide.jpg" alt="ebook combo"></a></li>
+<li><a href="/setup-guides-ebooks"><img src="//forums.audioholics.com/forums/styles/audioholics/audio/setupguide.jpg" data-src="//forums.audioholics.com/forums/styles/audioholics/audio/setupguide.jpg" alt="ebook combo" data-loaded="true"></a></li>
 </ul>
 </div>
 <div class="col-xs-1" style="width:125px">
 <div class="primaryContent menuHeader"></div>
 <ul class="secondaryContent blockLinksList">
-<li><a href="/buying-guides-ebooks"><img src="//forums.audioholics.com/forums/styles/audioholics/audio/buyingguide.jpg" data-defsrc="//forums.audioholics.com/forums/styles/audioholics/audio/buyingguide.jpg" alt="ebook combo"></a></li>
+<li><a href="/buying-guides-ebooks"><img src="//forums.audioholics.com/forums/styles/audioholics/audio/buyingguide.jpg" data-src="//forums.audioholics.com/forums/styles/audioholics/audio/buyingguide.jpg" alt="ebook combo" data-loaded="true"></a></li>
 </ul>
 </div>
 </div>
@@ -318,7 +318,7 @@ Get the Audioholics AV Gear Guide Ebook FREE! <a href="https://audioholics.us6.l
 <li><a href="/recommended-systems">Recommended Systems</a></li>
 <li><a href="/how-to-shop">How to Shop</a></li>
 <li><a href="/product-awards">Product Awards &amp; Gift Guides</a></li>
-<li><a href="/product-awards/2013-audioholics-product-year"><img src="//forums.audioholics.com/forums/styles/audioholics/audio/audioyear.jpg" alt="Product of the Year"></a></li>
+<li><a href="/product-awards/2013-audioholics-product-year"><img src="/static/ph.png" data-src="//forums.audioholics.com/forums/styles/audioholics/audio/audioyear.jpg" alt="Product of the Year"></a></li>
 </ul>
 </div>
 </div>
@@ -507,7 +507,7 @@ addthis_config.data_track_clickback = false
 <div class="documentByLine">
 by
 <span>
-<a rel="author" class="author url fn" href="/author/clint">Clint DeBoer</a>
+<a rel="author" class="author url fn" href="/authors/clint-deboer">Clint DeBoer</a>
 </span>
 — <span> December 29, 2006<br></span>
 <div>
@@ -552,6 +552,12 @@ by
 <a class="contenttype-document" href="/groups/admin/reprints">Reprint Rights, Terms and Conditions of Use</a>
 </li>
 </ul>
+</div>
+<div class="author-bio">
+<h5>About the author:</h5>
+<a href="/author/clint-deboer" class="portrait-link"><img src="/authors/clint-deboer/image_mini2" alt="" class="portraitPhoto" style=""></a>
+<p>Clint Deboer was terminated from Audioholics for misconduct on April 4th, 2014. He no longer represents Audioholics in any fashion.</p>
+<a href="/author/clint-deboer">View full profile</a>
 </div>
 <div class="row footerad">
 <div id="ad-bot-728">
@@ -603,6 +609,7 @@ text-decoration:none;
 <div id="div-gpt-ad-1375332798332-3" style="width:300px; height:250px;">
 </div>
 </div>
+
 </div>
 <div class="sideadverts mobilesideadverts">
 <div id="div-gpt-ad-1375332798332-1" style="width:300px; height:250px; padding:0;border-radius:0" class="sideadverts">
@@ -611,7 +618,7 @@ text-decoration:none;
 </div>
 </div>
 <div class="youtubeblock">
-<img style="height:40px;width:100px;" src="//forums.audioholics.com/forums/styles/audioholics/audio/youtubeblock.png" data-defsrc="//forums.audioholics.com/forums/styles/audioholics/audio/youtubeblock.png" alt="youtube">
+<img style="height:40px;width:100px;" src="/static/ph.png" data-src="//forums.audioholics.com/forums/styles/audioholics/audio/youtubeblock.png" alt="youtube">
 <div class="youtube-pl" id="mR0V8NbmAiw" style="width: 100%; height: 170px; background-image: url(&quot;https://i.ytimg.com/vi/mR0V8NbmAiw/sddefault.jpg&quot;);" data-params="modestbranding=1&amp;showinfo=0&amp;controls=0&amp;vq=hd720"><div class="play"></div></div>
 <a class="tubesub" href="https://www.youtube.com/user/audioholicslive?sub_confirmation=1">Subscribe to Our Channel</a>
 </div>
@@ -717,7 +724,7 @@ text-decoration:none;
 <li><a href="/home-theater-connection">Home Theater Connection Help</a></li>
 <li><a href="/diy-audio">DIY Audio &amp; Wiring</a></li>
 <li class="twlogo">
-<img id="trustwaveSealImage" style="height:54px;width:105px;cursor:pointer" alt="trustwave seal" src="https://sealserver.trustwave.com/seal_image.php?customerId=defe2e199bf347a6b9c8fb3f7ee0cda8&amp;size=105x54&amp;style=" data-defsrc="https://sealserver.trustwave.com/seal_image.php?customerId=defe2e199bf347a6b9c8fb3f7ee0cda8&amp;size=105x54&amp;style=" border="0" onclick="javascript:window.open('https://sealserver.trustwave.com/cert.php?customerId=defe2e199bf347a6b9c8fb3f7ee0cda8&amp;size=105x54&amp;style=', 'c_TW', 'location=no, toolbar=no, resizable=yes, scrollbars=yes, directories=no, status=no, width=615, height=720'); return false;" oncontextmenu="javascript:alert('Copying Prohibited by Law - Trusted Commerce is a Service Mark of TrustWave Holdings, Inc.'); return false;" title="This site is protected by Trustwave's Trusted Commerce program">
+<img id="trustwaveSealImage" style="height:54px;width:105px;cursor:pointer" class="lozad" src="/static/ph.png" data-src="https://sealserver.trustwave.com/seal_image.php?customerId=defe2e199bf347a6b9c8fb3f7ee0cda8&amp;size=105x54&amp;style=" border="0" onclick="javascript:window.open('https://sealserver.trustwave.com/cert.php?customerId=defe2e199bf347a6b9c8fb3f7ee0cda8&amp;size=105x54&amp;style=', 'c_TW', 'location=no, toolbar=no, resizable=yes, scrollbars=yes, directories=no, status=no, width=615, height=720'); return false;" oncontextmenu="javascript:alert('Copying Prohibited by Law - Trusted Commerce is a Service Mark of TrustWave Holdings, Inc.'); return false;" alt="This site is protected by Trustwave's Trusted Commerce program" title="This site is protected by Trustwave's Trusted Commerce program">
 </li>
 </ul>
 </div>
@@ -730,7 +737,7 @@ text-decoration:none;
 <ul class="list-inline" id="aboutmenu">
 <li><a href="/siteinfo" title="About Audioholics">About Audioholics</a></li>
 <li><a href="/groups/admin/advertise" title="Advertise with Us">Advertising</a></li>
-<li><a href="/siteinfo/staff-biographies" title="Author Pages">Author Pages</a></li>
+<li><a href="/authors" title="Author Pages">Author Pages</a></li>
 <li><a href="/groups/admin/legal" title="Legal">Legal</a></li>
 </ul>
 <ul id="legal">
