--- a/g/ga/gam/gamesflight.com.html
+++ b/g/ga/gam/gamesflight.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the gamesflight.com privacy policy that was archived on 2018-07-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20180717132104id_/http%3A//www.gamesflight.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the gamesflight.com privacy policy that was archived on 2019-04-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190416085351id_/http%3A//www.gamesflight.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
 <meta charset="utf-8">
@@ -7,26 +7,29 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="keywords" content="free games, games games, action games, mmo games, quiz games, arcade games, online games, web games">
 <meta name="author" content="">
-<meta property="og:image" content="http://web2.hostingcdn.com/gfasdasl/img/logo.png">
-<meta http-equiv="Pragma" content="private">
-<meta http-equiv="Cache-Control" content="private, max-age=5400, pre-check=5400">
-<meta http-equiv="Expires" content="Wed, 18 Jul 18 06:21:04 -0700">
+<meta property="og:image" content="https://c2.hostingcdn.com/gfasdasl/img/logo.png">
 <link rel="shortcut icon" sizes="16x16 24x24 32x32 48x48 64x64" href="/favicon/favicon.ico">
 <meta name="description" content="Blast into action games, arcade games, strategy games and more!">
+<script async="" src="https://www.google-analytics.com/analytics.js"></script><script type="text/javascript">
+/*<![CDATA[*/
+var cdnDomain = "https://c2.hostingcdn.com/gfasdasl/";
+var pageData = {"extensionStatus":"Uninstalled","projectName":"GamesFlight","projectType":"GAME","category":"Legal Page","game":0,"uid":"","cid":""};
+/*]]>*/
+</script>
 <title>Privacy Policy - GamesFlight</title>
 <meta name="google-site-verification" content="1JSiH2SYSRWWVR9NOB0TF8llPWJeznp4L5LfQarZLxw"><meta name="google-site-verification" content="kck0kWgtztzMwAfpyIF5HgiHn1t2LEK8E9lgK-rjvEg">
-<!--TY pixel --><!--end TY pixel --><!--Deactivate pixel --><!--end Deactivate pixel -->
-<script async="" src="https://www.google-analytics.com/analytics.js"></script><script src="http://web2.hostingcdn.com/gsg/js/tyresolver.js"></script>
-<link href="/themes/common/content/css/style.css" rel="stylesheet">
-<link href="http://web2.hostingcdn.com/gsg/css/bootstrap.min.css" rel="stylesheet">
+<!-- ty pixel head --><!-- end ty pixel head --><!--Deactivate pixel --><!--end Deactivate pixel -->
+<script src="https://c2.hostingcdn.com/gsg/js/tyresolver.js"></script>
+<link href="https://c2.hostingcdn.com/gsg/css/style.css" rel="stylesheet">
+<link href="https://c2.hostingcdn.com/gsg/css/bootstrap.min.css" rel="stylesheet">
 <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-<link href="http://web2.hostingcdn.com/gsg/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+<link href="https://c2.hostingcdn.com/gsg/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 <!-- Custom styles for this template -->
-<link href="http://web2.hostingcdn.com/gfasdasl/css/template.css?a=2" rel="stylesheet">
+<link href="https://c2.hostingcdn.com/gfasdasl/css/template.css?a=2" rel="stylesheet">
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
 <!--[if lt IE 9]>
-<script src="http://web2.hostingcdn.com/gsg/js/html5shiv.min.js"></script>
-<script src="http://web2.hostingcdn.com/gsg/js/respond.min.js"></script>
+<script src="https://c2.hostingcdn.com/gsg/js/html5shiv.min.js"></script>
+<script src="https://c2.hostingcdn.com/gsg/js/respond.min.js"></script>
 <![endif]-->
 <script>var baseFunctions={Base64:{decode:function decode64(input){var keyStr="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789+/=";var output="";var chr1,chr2,chr3="";var enc1,enc2,enc3,enc4="";var i=0;var base64test=/[^A-Za-z0-9\+\/\=]/g;input=input.replace(/[^A-Za-z0-9\+\/\=]/g,"");do{enc1=keyStr.indexOf(input.charAt(i++));enc2=keyStr.indexOf(input.charAt(i++));enc3=keyStr.indexOf(input.charAt(i++));enc4=keyStr.indexOf(input.charAt(i++));chr1=(enc1<<2)|(enc2>>4);chr2=((enc2&15)<<4)|(enc3>>2);chr3=((enc3&3)<<6)|enc4;output=output+String.fromCharCode(chr1);if(enc3!=64){output=output+String.fromCharCode(chr2)}if(enc4!=64){output=output+String.fromCharCode(chr3)}chr1=chr2=chr3="";enc1=enc2=enc3=enc4=""}while(i<input.length);return unescape(output)}}};</script>
 <!-- Google Analytics -->
@@ -37,7 +40,8 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 ga('create', 'UA-66503302-8', 'auto');
 ga('send', 'pageview');
-</script>	</head>
+</script>
+</head>
 <body>
 <div class="header">
 <div class="container">
@@ -144,7 +148,7 @@ ga('send', 'pageview');
 <iframe src="http://pmpubs.com/gmbn?sid=gamesflight&amp;size=728x90" style="width: 728px; height: 90px;" frameborder="0" scrolling="no"></iframe>
 </div>        </div>
 <div class="col-md-4" id="indexgames">
-<div class="panel panel-default panel-group-small"><div class="panel-body"><div class="row"></div><div class="row"><div class="col-md-6 gamecategory" id="indexgame"><a href="/Play_Dinosaur_Simulator_18588"><img src="http://web3.hostingcdn.com/content/files/1/8/588/image/0000018588_i2.jpg" class="img-responsive" title="Dinosaur Simulator"></a></div><div class="col-md-6 gamecategory" id="indexgame"><a href="/Play_Dinosaur_Hunter_Dino_City_18587"><img src="http://web3.hostingcdn.com/content/files/1/8/587/image/0000018587_i2.jpg" class="img-responsive" title="Dinosaur Hunter Dino City"></a></div></div></div></div>        </div>
+<div class="panel panel-default panel-group-small"><div class="panel-body"><div class="row"></div><div class="row"><div class="col-md-6 gamecategory" id="indexgame"><a href="/Play_Jelly_Crush_18638"><img src="https://c1.hostingcdn.com/content/files/1/8/638/image/0000018638_i2.jpg" class="img-responsive" title="Jelly Crush"></a></div><div class="col-md-6 gamecategory" id="indexgame"><a href="/Play_Miami_Crime_18637"><img src="https://c1.hostingcdn.com/content/files/1/8/637/image/0000018637_i2.jpg" class="img-responsive" title="Miami Crime"></a></div></div></div></div>        </div>
 </div>
 <div class="col-md-2">
 <div class="box160x600 text-center">
@@ -225,18 +229,18 @@ ga('send', 'pageview');
 <div id="footer-simple">
 <div class="row">
 <div class="col-xs-12 col-sm-8">
-© <a href="/">GamesFlight.com</a> 2018. All Rights Reserved.
+© <a href="/">GamesFlight.com</a> 2019. All Rights Reserved.
 </div>
 <div class="col-xs-12 col-sm-4 text-right"><a href="/about">About</a> <a href="/terms-of-use">Terms of use</a> <a href="/privacy-policy">Privacy policy</a> <a href="/copyright-policy">Copyright policy</a> <a href="/deactivate">Uninstall</a> <a href="/contact">Contact</a></div>
 </div>
 </div>
 </div>
 </div>
-<!--TY pixel --><!--end TY pixel --><!--Deactivate pixel --><!--end Deactivate pixel -->
-<script src="http://web2.hostingcdn.com/gsg/js/jquery-1.12.1.min.js" crossorigin="anonymous"></script>
-<script src="http://web2.hostingcdn.com/gsg/js/bootstrap.min.js"></script>
-<script src="http://web2.hostingcdn.com/gsg/js/main.js"></script>
-<script src="http://web2.hostingcdn.com/gsg/js/ie10-viewport-bug-workaround.js"></script>
-<script src="http://web2.hostingcdn.com/gsg/js/js.cookie.js"></script>
+<!-- body pixel --><!-- end body pixel --><!--Deactivate pixel --><!--end Deactivate pixel -->
+<script src="https://c2.hostingcdn.com/gsg/js/jquery-1.12.1.min.js" crossorigin="anonymous"></script>
+<script src="https://c2.hostingcdn.com/gsg/js/bootstrap.min.js"></script>
+<script src="https://c2.hostingcdn.com/gsg/js/main.js"></script>
+<script src="https://c2.hostingcdn.com/gsg/js/ie10-viewport-bug-workaround.js"></script>
+<script src="https://c2.hostingcdn.com/gsg/js/js.cookie.js"></script>
 
 </body></html>
