--- a/t/tw/twi/twistedviraltraffic.com.html
+++ b/t/tw/twi/twistedviraltraffic.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the twistedviraltraffic.com privacy policy that was archived on 2018-11-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181113044651id_/http%3A//www.twistedviraltraffic.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the twistedviraltraffic.com privacy policy that was archived on 2019-04-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190416195232id_/http%3A//twistedviraltraffic.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 <title>Twisted Viral Traffic!</title>
@@ -62,7 +62,7 @@ color:#000000;cursor:pointer;cursor:hand;font-family: Verdana, Arial;font-size: 
 
 
 </style>
-<center>       <a href="http://twistedviraltraffic.com/bannerclick.php?id=27484" target="_blank"><img src="http://www.clixtrac.com/images/clixtrac468x60b.gif" border="0"></a><br>
+<center>       <a href="http://twistedviraltraffic.com/bannerclick.php?id=551" target="_blank"><img src="http://micropowerlist.com/images/banner468x60.jpg" border="0"></a><br>
     </center><p align="center">
 
 
