--- a/c/co/cod/coderpad.io.html
+++ b/c/co/cod/coderpad.io.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the coderpad.io privacy policy that was archived on 2018-12-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181213002252id_/https%3A//coderpad.io/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the coderpad.io privacy policy that was archived on 2019-04-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190416211726id_/https%3A//coderpad.io/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
   <meta charset="UTF-8">
@@ -13,9 +13,9 @@
     CoderPad
   </title>
 
-  <link rel="stylesheet" media="all" href="https://d146h09pbg0b1a.cloudfront.net/assets/application-f91ead6bb3e98cd9ca2dea55e0fe3dd3334057806a21bd2a8cd538cc60651124.css">
+  <link rel="stylesheet" media="all" href="https://d146h09pbg0b1a.cloudfront.net/assets/application-d34c054105e7ec4e8c45f0f48560d126804f4151d2910f16d3825bd6e7ada104.css">
   <meta name="csrf-param" content="authenticity_token">
-<meta name="csrf-token" content="5BtzjE7vcV7uNY4YjEJX7QgY8nInUx1Aj1IP+leutn+i6r1wP19soiFl2CBEUdJy3ZlzZlJsOJn+9VOAFds7JQ==">
+<meta name="csrf-token" content="86gEcUk8gYwi3bFSbOFlb2fkRFgFc7c6IMd3ktQRf1KfsOfoeLfs8tpsDtSLwNMLgYo2wjheNIEtFBNzlcGomw==">
     <script async="" src="//www.google-analytics.com/analytics.js"></script><script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -293,10 +293,11 @@ For any other purpose disclosed by us, when we request your consent regarding th
     <li><a href="/getting-started-interviewers">Getting Started: Interviewers</a></li>
     <li><a href="/getting-started-recruiters">Getting Started: Recruiters</a></li>
     <li><a href="/getting-started-candidates">Getting Started: Candidates</a></li>
+    <li><a href="/features/integrations">Integrations</a></li>
   </ul>
 
   <ul class="right">
-    <li>© 2018 CoderPad, Inc</li>
+    <li>© 2019 CoderPad, Inc</li>
     <li>
       Questions?
       <a href="mailto:support@coderpad.io?subject=Question%20About%20CoderPad">
