budgetvm.com (archived on 2019-04-16)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;informationtech",
  "char_count": 2031,
  "classifier_probability": 0.77,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.17,
  "homepage_snapshot_redirected_domain": "budgetvm.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20190524165158id_/https://www.budgetvm.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20190524165158id_/http%3A//budgetvm.com",
  "interval": "2019_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "budgetvm.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20190416225055id_/https%3A//www.budgetvm.com/privacy-policy.php",
  "policy_title": "Privacy Policy",
  "policy_url": "budgetvm.com/privacy-policy.php",
  "sha1": "8ca31275b5f666714f8c9cee6e6561c8befba04d",
  "simhash": 5209569396080065492,
  "simhash_updated": false,
  "site_hostname": "budgetvm.com",
  "site_url": "http://budgetvm.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20190416225055",
  "word_count": 334,
  "year": 2019
}

--- a/b/bu/bud/budgetvm.com.html
+++ b/b/bu/bud/budgetvm.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the budgetvm.com privacy policy that was archived on 2017-03-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170312211024id_/https%3A//www.budgetvm.com/privacy-policy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the budgetvm.com privacy policy that was archived on 2019-04-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190416225055id_/https%3A//www.budgetvm.com/privacy-policy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><!--<![endif]--><head>
   <meta charset="utf-8">
@@ -63,7 +63,7 @@ nav.navbar #main-nav{padding:0}nav.navbar #main-nav .navbar-nav > li > a{padding
   <script async="" src="//web.archive.org/web/20160319194537/https://www.google-analytics.com/analytics.js"></script><script src="https://web.archive.org/web/20150315011811/https://dnn506yrbagrg.cloudfront.net/pages/scripts/0025/2595.js?439012" async="" type="text/javascript"></script><script type="text/javascript" async="" src="https://cdn.livechatinc.com/tracking.js"></script><script async="" src="//web.archive.org/web/20160319194533/https://connect.facebook.net/en_US/fbevents.js"></script><script async="" src="//web.archive.org/web/20150315014926/https://static.woopra.com/js/w.js"></script><script src="/includes/js/header.min.js"></script>
   <script src="/includes/js/order.js"></script>
   <script src="/includes/js/facebook.js"></script>
-<script async="true" type="text/javascript" src="https://web.archive.org/web/20150315011811/https://s.adroll.com/j/roundtrip.js"></script><script async="true" type="text/javascript" src="//web.archive.org/web/20150315013605/https://d.adroll.com/pixel/RN62R5I6URAULMRPNLINZF/TDKJD2SJPNEAHMPWOGHWQQ?pv=49073581278.7211&amp;cookie=&amp;keyw="></script></head>
+<script async="true" type="text/javascript" src="https://web.archive.org/web/20150315011811/https://s.adroll.com/j/roundtrip.js"></script><script async="true" type="text/javascript" src="//web.archive.org/web/20150315013605/https://d.adroll.com/pixel/RN62R5I6URAULMRPNLINZF/TDKJD2SJPNEAHMPWOGHWQQ?pv=71813795175.14317&amp;cookie=&amp;keyw="></script></head>
 <body id="section-home">
   <!--/////////// HEADER SECTION //////////-->
 <header>
@@ -75,8 +75,7 @@ nav.navbar #main-nav{padding:0}nav.navbar #main-nav .navbar-nav > li > a{padding
             USA &amp; Canada: 877-378-3769 | International: 702-965-1615 |  <a href="mailto:sales@budgetvm.com">sales@budgetvm.com</a>
           </div>
           <div class="links right">
-            <a href="https://www.budgetvm.com"><img src="/includes/img/us.png" height="14" width="24" alt="US" style="float:left;margin-top:5px;margin-right:5px"></a>
-            <a href="http://cn.budgetvm.com"><img src="/includes/img/cn.png" height="14" width="24" alt="CN" style="float:left;margin-top:5px;margin-right:5px;"></a>
+            <a href="https://www.budgetvm.com"><img src="/includes/img/us.png" height="14" width="24" alt="US" style="float:left;margin-top:5px;margin-right:5px;margin-left: 5px;"></a>
             <nav style="float: left;z-index: 1003;">
               <ul id="company_dropdown">
                 <li style="display: block;"><a href="https://portal.budgetvm.com/auth/login">Company |</a>
@@ -91,8 +90,9 @@ nav.navbar #main-nav{padding:0}nav.navbar #main-nav .navbar-nav > li > a{padding
                 </li>
               </ul>
             </nav>
-            <a href="https://portal.budgetvm.com/auth/login" style="margin-left:-20px">Support</a>|
+            <a href="https://portal.budgetvm.com/auth/login" style="margin-left:-10px">Support</a>|
             <a href="https://portal.budgetvm.com/auth/login">Client Login</a>|
+            <a data-toggle="modal" data-target="#createAccount" data-productid="" data-affiliate="" data-promotion="" data-configoptions="">Create Account</a>
           </div>
           <div class="clear"></div>
         </div>
@@ -213,6 +213,7 @@ nav.navbar #main-nav{padding:0}nav.navbar #main-nav .navbar-nav > li > a{padding
     <div id="customer_login" style="display: none;">
       <form id="customer_login" class="form-horizontal order-modal" method="POST">
         <input type="hidden" id="productid" name="productid">
+        <input type="hidden" id="bundleid" name="bundleid">
         <input type="hidden" id="configoptions" name="configoptions">
         <input type="hidden" id="promotion" name="promotion">
         <input type="hidden" id="affiliate" name="affiliate">
@@ -242,6 +243,7 @@ nav.navbar #main-nav{padding:0}nav.navbar #main-nav .navbar-nav > li > a{padding
     <div id="customer_create">
       <form id="customer_create" class="form-horizontal order-modal" method="POST">
         <input type="hidden" id="productid" name="productid">
+        <input type="hidden" id="bundleid" name="bundleid">
         <input type="hidden" id="configoptions" name="configoptions">
         <input type="hidden" id="promotion" name="promotion">
 
@@ -281,7 +283,7 @@ nav.navbar #main-nav{padding:0}nav.navbar #main-nav .navbar-nav > li > a{padding
     <div class="container">
       <div class="row">
         <div class="col-lg-8">
-          <p class="copyright">Copyright © 2017 Enzu Inc., All Rights Reserved. <a href="/privacy-policy.php" style="color:#fff;">Privacy Policy</a></p>
+          <p class="copyright">Copyright © 2019 Enzu Inc., All Rights Reserved. <a href="/privacy-policy.php" style="color:#fff;">Privacy Policy</a></p>
         </div>
         <div class="col-lg-4"></div>
       </div><!-- /row -->
@@ -291,7 +293,6 @@ nav.navbar #main-nav{padding:0}nav.navbar #main-nav .navbar-nav > li > a{padding
   <noscript><img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=703569299746274&ev=PageView&noscript=1"/></noscript>
   <script src="/includes/js/footer.min.js"></script>
   <script src="/includes/js/google.js"></script>
-  <script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async=""></script>
   
 
 </body></html>
