--- a/g/ge/get/getgreenshot.org.html
+++ b/g/ge/get/getgreenshot.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the getgreenshot.org privacy policy that was archived on 2018-11-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181128044415id_/http%3A//getgreenshot.org/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the getgreenshot.org privacy policy that was archived on 2019-04-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190416230150id_/https%3A//getgreenshot.org/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html class="no-js"><!--<![endif]--><head>
     <meta charset="utf-8">
@@ -29,7 +29,7 @@
     <script src="/js/vendor/blockadblock.js"></script>
     <script src="/js/main.js?v=2"></script>
 	
-    <link rel="canonical" href="http://getgreenshot.org/privacy-policy/">
+    <link rel="canonical" href="https://getgreenshot.org/privacy-policy/">
     
     <script type="text/javascript">
         var _gaq = _gaq || [];
