leasedadspace.com (archived on 2019-04-17)
{
  "alexa_rank": 345422,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 5829,
  "classifier_probability": 0.95,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "very_confusing",
  "flesch_kincaid": 15.21,
  "homepage_snapshot_redirected_domain": "leasedadspace.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20190417011546id_/https://www.leasedadspace.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20190417011546id_/http%3A//leasedadspace.com",
  "interval": "2019_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "leasedadspace.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20190417011542id_/https%3A//www.leasedadspace.com/privacy-policy",
  "policy_title": "Privacy Policy",
  "policy_url": "leasedadspace.com/privacy-policy",
  "sha1": "be216c248898f068202e0fa7b9d15f08aecc9b90",
  "simhash": 11478466857372098049,
  "simhash_updated": false,
  "site_hostname": "leasedadspace.com",
  "site_url": "http://leasedadspace.com",
  "smog": 17.24,
  "strict_updated": false,
  "timestamp": "20190417011542",
  "word_count": 872,
  "year": 2019
}

--- a/l/le/lea/leasedadspace.com.html
+++ b/l/le/lea/leasedadspace.com.html
@@ -1,11 +1,11 @@
-<!--The following is the downloaded HTML source of the leasedadspace.com privacy policy that was archived on 2018-09-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20180905222328id_/http%3A//www.leasedadspace.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the leasedadspace.com privacy policy that was archived on 2019-04-17.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190417011542id_/https%3A//www.leasedadspace.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en" class="no-js"><head>
     <title>
       Privacy Policy
     </title>
-    <link rel="stylesheet" href="/assets/bootstrap-all-f4bb9eeaf6ba8ad56a1498a441929c76.css">
+    <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min-3f9be4352903f3a7bce058016cf74cdc.css">
     <link rel="stylesheet" href="/assets/style-f95626c760ed3dccfbf299f69539089c.css">
     <link rel="shortcut icon" href="/assets/favicon-49f7f73419797356830bc2e32e751f21.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Architects+Daughter">
@@ -33,7 +33,7 @@
                 <!-- Navigation -->
 <nav id="mainNav" role="navigation" class="collapse navbar-collapse">
   <ul class="nav navbar-nav navbar-right">
-    <li><a href="/" data-toggle="collapse" data-target=".navbar-collapse.in"><small><em>Online Now: <strong>590</strong></em></small></a></li>
+    <li><a href="/" data-toggle="collapse" data-target=".navbar-collapse.in"><small><em>Online Now: <strong>861</strong></em></small></a></li>
     <li class="hidden-sm"><a href="/howItWorks/index" data-toggle="collapse" data-target=".navbar-collapse.in">How it Works</a></li>
     <li><a href="/adBlog/index" data-toggle="collapse" data-target=".navbar-collapse.in">AdBlog</a></li>
     <li><a href="/adboard/index" data-toggle="collapse" data-target=".navbar-collapse.in">AdBoard</a></li>
@@ -148,7 +148,7 @@
           <div><a href="/privacy-policy">Privacy Policy</a></div>
           <div><a href="/contact">Contact</a></div>
           <div><a href="/faq/index">FAQ</a></div>
-          <div><a href="/support">Support</a></div>
+          <div><a href="https://reply2frank.com/" target="_blank">Support</a></div>
       </div>
       <div class="col-md-3 col-md-pull-3">
           <div><a href="/members/leaders">Leaders</a></div>
