crsdata.com (archived on 2019-04-17)
{
  "alexa_rank": 46955,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 4619,
  "classifier_probability": 0.98,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 10.7,
  "homepage_snapshot_redirected_domain": "crsdata.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20190428020045id_/http://www.crsdata.com/main/",
  "homepage_snapshot_url": "https://web.archive.org/web/20190428020045id_/http%3A//crsdata.com",
  "interval": "2019_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "crsdata.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20190417055454id_/http%3A//www.crsdata.com/privacy-policy",
  "policy_title": "Privacy Policy | CRS Data",
  "policy_url": "crsdata.com/privacy-policy",
  "sha1": "792e160b30b5c9652375f4263fc91c2bd37cc610",
  "simhash": 11205112607660253349,
  "simhash_updated": true,
  "site_hostname": "crsdata.com",
  "site_url": "http://crsdata.com",
  "smog": 13.4,
  "strict_updated": true,
  "timestamp": "20190417055454",
  "word_count": 759,
  "year": 2019
}

--- a/c/cr/crs/crsdata.com.html
+++ b/c/cr/crs/crsdata.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the crsdata.com privacy policy that was archived on 2018-11-09.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181109142151id_/http%3A//www.crsdata.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the crsdata.com privacy policy that was archived on 2019-04-17.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190417055454id_/http%3A//www.crsdata.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -60,7 +60,7 @@
 			<li><a href="/blog/">Blog</a></li>
 			<li><a href="/about/about-us/">About</a></li>
 			<li><a href="https://secure.crsdata.com/contact/">Contact</a></li>
-			<li><a href="https://mail.crsdata.com">Mail</a></li>
+			<!--<li><a href="https://mail.crsdata.com">Mail</a></li>-->
 			<li class="login"><a href="/login/" onclick="return loginBtn();">Login</a></li>
 			<li><a target="_blank" href="https://www.facebook.com/pages/CRS-Data/272385372782589"><img src="/media/images/social/social_03.png" alt=""></a></li>
 			<li><a target="_blank" href="https://twitter.com/crs_data"><img src="/media/images/social/social_05.png" alt=""></a></li>
@@ -242,15 +242,15 @@
 				<div class="content-wrap testimonial">
 		<div class="bounds">
 			<div class="photo">
-				<img src="/lib/image/thumbs/man_4_542_362.png ">
+				<img src="/lib/image/thumbs/lady_2_542_362.png ">
 			</div>
 			<div class="quote">
 				<p>
-					</p><p class="p1">The Real Estate [Suite] … gives me an edge in an industry that is quite competitive.”<span class="s1">&nbsp;</span></p><br>
+					</p><p>"We have had CRS Data integrated in our MLS System here at the Knoxville Area Association MLS since 2004. Could not be more pleased with their staff and support."</p><br>
 					
 				<p></p>
 				<p>
-					<strong>ROSS RYLANCE</strong> - Keller Williams Realty, Franklin				</p>
+					<strong>DONNA ROACH</strong> - Knoxville Area Association of Realtors MLS				</p>
 			</div>
 		</div>
 	</div>
@@ -421,7 +421,7 @@ window.onload = function(){
 					
 				</dl>
 			</div>
-			<p class="copy"> © 2018 Courthouse Retrieval System. <span class="rights">All Rights Reserved.</span></p>
+			<p class="copy"> © 2019 Courthouse Retrieval System. <span class="rights">All Rights Reserved.</span></p>
 		</div>
 	<div class="clear"></div>	
 </div>
